# S-211-Converter

./: LICENSE  README.md  app.py  build.ps1  pyproject.toml  requirements.txt
test/csv/: marcfile_20240807_R_1QF0te1TERO1qhJ_Add.csv  marcfile_20240807_R_3F3SajjEeIa3ZIf_Add.csv  marcfile_2024_FromSept10_add_final.csv  marcfile_2024_FromSept10_delete_final.csv  marcfile_2024_FromSept10_edited_final.csv  marcfile_20250211_094752.csv  marcfile_2025_FromApr01_Add.csv  marcfile_2025_FromFeb11_Add.csv  marcfile_2025_FromFeb19_Add.csv  marcfile_2025_FromFeb19_Delete.csv  marcfile_2025_FromFeb25_Add.csv  marcfile_2025_FromJan21_Add.csv  marcfile_2025_FromJan21_Delete.csv  marcfile_2025_FromMar04_Add.csv  marcfile_2025_FromMar11_Add.csv  marcfile_2025_FromMar18_Add.csv  marcfile_2025_FromMar25_Add.csv  marcfile_2025_fromFeb25_Delete.csv  marcfile_2025_fromMar04_Delete.csv  marcfile_2025_fromMar10_Delete.csv  marcfile_2025_fromMar11_Delete.csv
test/xml/: marcfile.xml  marcfile_20240807_R_1JzuoIp4jtjdimT.xml  marcfile_20240807_R_1QF0te1TERO1qhJ.xml  marcfile_20240807_R_3F3SajjEeIa3ZIf.xml  marcfile_20240807_R_3ZPmiqZuvNfczDG.xml  marcfile_20240807_R_64jW7p34FmAGRp6.xml  marcfile_20240807_R_6stTRCuHt2xX4PC.xml  marcfile_20240807_mutiple_DoubleQuoteIssues.xml  marcfile_2024_FromSept10.xml  marcfile_2025 2.xml  marcfile_2025.xml  marcfile_20250211_094752.xml  marcfile_20250219_103436.xml  marcfile_20250225_142251.xml  marcfile_20250304_101337.xml  marcfile_20250311_095956 1.xml  marcfile_20250318_100139.xml  marcfile_20250325_115626.xml  marcfile_20250401_094518.xml  marcfile_2025_FromAll.xml  marcfile_2025_new.xml  (+1 more)
